--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
         </div>
       </div>
       <nav class="hidden sm:flex items-center gap-5 text-sm text-white/70">
-        <a class="hover:text-white" href="#about">About</a>
-        <a class="hover:text-white" href="#skills">Skills</a>
-        <a class="hover:text-white" href="#experience">Experience</a>
-        <a class="hover:text-white" href="#projects">Projects</a>
-        <a class="hover:text-white" href="#contact">Contact</a>
+        <!-- Updated nav links for multi‑page structure -->
+        <a class="hover:text-white" href="index.html">Home</a>
+        <a class="hover:text-white" href="experience.html">Experience</a>
+        <a class="hover:text-white" href="projects.html">Projects</a>
+        <a class="hover:text-white" href="contact.html">Contact</a>
       </nav>
-      <a href="#projects" class="inline-flex items-center gap-2 rounded-xl border border-white/10 bg-white/5 px-3 py-2 text-sm text-white/85 hover:bg-white/10">
+      <!-- Button linking to the standalone projects page -->
+      <a href="projects.html" class="inline-flex items-center gap-2 rounded-xl border border-white/10 bg-white/5 px-3 py-2 text-sm text-white/85 hover:bg-white/10">
         View projects
         <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
           <path stroke-linecap="round" stroke-linejoin="round" d="M5 12h14m-7-7l7 7-7 7" />
@@ -70,7 +71,7 @@
             Creative Graphic Designer and Video Editor with 5+ years of experience across broadcast, print, and social media. Skilled in Adobe Creative Suite, motion graphics, and project management—delivering high-quality visuals and engaging content.
           </p>
           <div class="mt-6 flex flex-wrap gap-3">
-            <a class="inline-flex items-center gap-2 rounded-xl bg-white text-black px-4 py-2 text-sm font-semibold hover:opacity-90" href="#contact">Contact
+            <a class="inline-flex items-center gap-2 rounded-xl bg-white text-black px-4 py-2 text-sm font-semibold hover:opacity-90" href="contact.html">Contact
               <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8m-9 7v.01M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
               </svg>
